# SentryWall

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  database.py  main.py  models.py
backend/app/api/routes/: admin.py  chat.py  health.py
backend/app/core/: config.py
backend/app/schemas/: __init__.py  chat.py
backend/app/services/: __init__.py  pii_handler.py
backend/tests/: conftest.py  test_admin.py  test_chat.py  test_health.py  test_pii_handler.py
frontend/: README.md  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/components/admin/: traffic-chart.tsx
frontend/components/chat/: ChatInput.tsx  MessageBubble.tsx  SecurityBadge.tsx
frontend/components/health/: health-check-card.tsx
frontend/lib/: api.ts  security.ts
frontend/lib/store/: health-store.ts
frontend/stores/: chat-store.ts
