[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentrywall-backend"
version = "0.1.0"
description = "SentryWall FastAPI backend service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "openai>=2.21.0",
  "pydantic-settings>=2.11.0",
  "sqlmodel>=0.0.33",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
